fix overflow bug

--- a/src/styles/toggler.css
+++ b/src/styles/toggler.css
@@ -129,6 +129,7 @@ html {
 
 .logo {
   position: absolute;
+  display: none;
   top: 10px;
   left: 0px;
 }
